data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2425.wast
;; 6. Define a block with irregular stack management, particularly involving `tee_local` and `set_local` within the block leading to backward jumps, ensuring the CFG correctly maintains stack consistency and local variable states.

(assert_invalid
  (module (func $type-block-irregular-stack (result i32)
    (local $0 i32)
    (block (result i32) 
      (i32.const 0)
      (tee_local $0)
      (br 0)
    )
  ))
  "type mismatch"
)